bpk-lib/crates/syncbat/tests/ui/operation_macro_unknown_key.stderr
error: unknown key `unknown` in #[syncbat::operation]
 --> tests/ui/operation_macro_unknown_key.rs:8:5
  |
8 |     unknown = "nope"
  |     ^^^^^^^
